--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 </head>
 <body>
   <header>
-    <h1 class="animate__animated animate__fadeInDown">Abdullah Ashraf</h1>
+    <h1 class="animate__animated animate__fadeInUp">Abdullah Ashraf</h1>
     <p class="animate__animated animate__fadeInUp">Graphic Designer & Video Editor</p>
   </header>
 
-  <section class="skills animate__animated animate__fadeInLeft">
+  <section class="skills">
     <h2>Skills</h2>
     <div class="skill-item">
       <i class="fas fa-palette"></i>
@@ -71,7 +71,7 @@
     </div>
   </section>
 
-  <section class="experience animate__animated animate__fadeInRight">
+  <section class="experience">
     <h2>Experience</h2>
     <div class="experience-item">
       <i class="fas fa-briefcase"></i>
@@ -96,12 +96,12 @@
     </div>
   </section>
 
-  <section class="summary animate__animated animate__fadeInLeft">
+  <section class="summary">
     <h2>Summary</h2>
     <p>Creative and detail-oriented Graphic Designer & Video Editor specializing in Adobe Photoshop, Illustrator, and DaVinci Resolve.</p>
   </section>
 
-  <section class="education animate__animated animate__fadeInRight">
+  <section class="education">
     <h2>Education</h2>
     <div class="education-item">
       <i class="fas fa-graduation-cap"></i>
@@ -112,7 +112,7 @@
     </div>
   </section>
 
-  <section class="connect animate__animated animate__fadeInUp">
+  <section class="connect">
     <h2>Connect with Me</h2>
     <div>
       <a href="https://wa.me/201100151198" target="_blank" aria-label="WhatsApp">
@@ -131,7 +131,6 @@
   </section>
 
   <script>
-    // إضافة رسوم متحركة عند التمرير
     document.addEventListener('DOMContentLoaded', () => {
       const sections = document.querySelectorAll('section');
       const options = {
